tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__Dichlorobenzene-AAAAAAAAAAAAAAAAAAAJkA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2448,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make higher tier cables, you'll have to use Polyphenylene Sulfide to coat them. Let's start with Dichlorobenzene.\n\n§6Already automated Polyphenylene Sulfide? Hold 128 sheets to skip this questline.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lDichlorobenzene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
