tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__DimensionalgoalD-AAAAAAAAAAAAAAAAAAAAvA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 188,
  "prerequisites": [
    14153825829382447
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can actually get the ores you want from the other two, but visit if you like?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lDimensional goal: Deimos",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    14153825829382447
  ],
  "rewards": [],
  "tasks": []
}
