tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EVChemicalBath-AAAAAAAAAAAAAAAAAAAE5A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1252,
  "optional_prerequisites": [
    176
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "An HV chemical bath or better is needed for the quantum eye. If you make an EV one you can also process Ilmenite better.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEV Chemical Bath",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
