tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EVChemicalReacto-AAAAAAAAAAAAAAAAAAAE2g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1242,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An EV chemical reactor is required to get some indium or make your radon production much faster. If you already made a large chemical reactor use that instead.\n\n[note]Complete either task.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEV Chemical Reactor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
