tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EVFieldGenerator-Jna1jgAySNSs8nS0YMXpLw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14153825829382447,
  "prerequisites": [
    1491,
    1261
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With Field Generators you can make your first Quantum Chests or Quantum Tanks. But the first two should be for your T2 rocket.\n\n[note]Note that the Assembler recipe is more resource efficient.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEV Field Generator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1491,
    1261
  ],
  "rewards": [],
  "tasks": []
}
